--- a/iPantry/Base.lproj/Main.storyboard
+++ b/iPantry/Base.lproj/Main.storyboard
@@ -18,7 +18,6 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Market" id="qVn-yu-lMR"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="view" destination="8bC-Xf-vdC" id="lh1-iu-ZJU"/>
@@ -35,6 +34,18 @@
                     <view key="view" contentMode="scaleToFill" id="pyu-uJ-ypk">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tabBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Fo9-sS-hnf">
+                                <rect key="frame" x="0.0" y="618" width="375" height="49"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <items>
+                                    <tabBarItem title="Market" id="ft0-Cd-pKG"/>
+                                    <tabBarItem title="Scanner" id="dBZ-3a-6Os"/>
+                                    <tabBarItem title="Profile" id="4bV-BQ-2aJ"/>
+                                </items>
+                            </tabBar>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="DLA-mZ-X67"/>
                         <color key="backgroundColor" systemColor="systemTealColor"/>
                     </view>
@@ -50,6 +61,18 @@
                     <view key="view" contentMode="scaleToFill" id="l6l-Ly-D1R">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tabBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="iTy-IS-bkf">
+                                <rect key="frame" x="0.0" y="618" width="375" height="49"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <items>
+                                    <tabBarItem title="Market" id="i2h-kH-fqx"/>
+                                    <tabBarItem title="Scanner" id="e7m-bu-VXm"/>
+                                    <tabBarItem title="Profile" id="YdZ-Id-dns"/>
+                                </items>
+                            </tabBar>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="DtV-19-fwI"/>
                         <color key="backgroundColor" systemColor="systemPinkColor"/>
                     </view>
@@ -65,6 +88,18 @@
                     <view key="view" contentMode="scaleToFill" id="Ngl-Ri-wMD">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tabBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="TBy-zk-Fuk">
+                                <rect key="frame" x="0.0" y="618" width="375" height="49"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <items>
+                                    <tabBarItem title="Market" id="Fpr-m4-al7"/>
+                                    <tabBarItem title="Scanner" id="tg8-XP-rEq"/>
+                                    <tabBarItem title="Profile" id="ubg-A7-Umd"/>
+                                </items>
+                            </tabBar>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="bup-Aw-ej3"/>
                         <color key="backgroundColor" systemColor="systemIndigoColor"/>
                     </view>
